--- a/apps/lms/src/styles/globals.css
+++ b/apps/lms/src/styles/globals.css
@@ -38,6 +38,23 @@ html {
   color: #838383;
 }
 
+.custom-scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /* border-radius: 10px; */
+  background-color: #f3f3f3;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f3f3f3;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  /* border-radius: 10px; */
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #003262;
+}
+
 @layer components {
   .links {
     @apply relative transition-all duration-300 ease-in-out after:absolute after:left-0 after:-bottom-[2px] after:bg-primary after:transition-all after:duration-300 after:ease-in-out after:content-[""] hover:text-primary;
