--- a/apps/admin/src/styles/globals.css
+++ b/apps/admin/src/styles/globals.css
@@ -21,6 +21,23 @@ html {
     Helvetica Neue, sans-serif;
 }
 
+.custom-scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /* border-radius: 10px; */
+  background-color: #f3f3f3;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f3f3f3;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  /* border-radius: 10px; */
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #003262;
+}
+
 @layer components {
   .loader-circle {
     @apply w-3 h-3 rounded-full bg-secondary animate-bounce;
