--- a/apps/admin/src/styles/globals.css
+++ b/apps/admin/src/styles/globals.css
@@ -21,6 +21,12 @@ html {
     Helvetica Neue, sans-serif;
 }
 
+@layer components {
+  .loader-circle {
+    @apply w-3 h-3 rounded-full bg-primary animate-bounce;
+  }
+}
+
 .custom-scrollbar::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   /* border-radius: 10px; */
@@ -38,12 +44,6 @@ html {
   background-color: #003262;
 }
 
-@layer components {
-  .loader-circle {
-    @apply w-3 h-3 rounded-full bg-secondary animate-bounce;
-  }
-}
-
 .loader div {
   animation-duration: 0.5s;
 }
@@ -58,4 +58,17 @@ html {
 
 .loader div:nth-child(3) {
   animation-delay: 0.5s;
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
 }
