--- a/apps/lms/src/styles/globals.css
+++ b/apps/lms/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap'); */
 
 @tailwind base;
 @tailwind components;
@@ -57,7 +57,7 @@ html {
 
 @layer components {
   .links {
-    @apply relative transition-all duration-300 ease-in-out after:absolute after:left-0 after:-bottom-[2px] after:bg-primary after:transition-all after:duration-300 after:ease-in-out after:content-[""] hover:text-primary;
+    @apply after:bg-primary hover:text-primary relative transition-all duration-300 ease-in-out after:absolute after:left-0 after:-bottom-[2px] after:transition-all after:duration-300 after:ease-in-out after:content-[""];
   }
 }
 
