--- a/apps/lms/src/styles/globals.css
+++ b/apps/lms/src/styles/globals.css
@@ -76,3 +76,16 @@ html {
   /* Microsoft Edge */
   color: #838383;
 }
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
